--- a/index.html
+++ b/index.html
@@ -33,8 +33,118 @@
     </div>
     </div>
     </header>
-    <main>
+    <main >
+        <section class="about secondary-background">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description dark-3 ">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        <div class="about-item">
+        <div>
+        <p class="item-title dark-3">Name:</p>
+        <p class="item-description dark-2">Mary Hardy</p>
+       </div>
+       <div >
+        <p class="item-title dark-3">Email:</p>
+        <p class="item-description dark-2">info@gmail.com</p>
+       </div>
+       <div >
+        <p class="item-title dark-3">Date Of Birth:</p>
+        <p class="item-description dark-2">10 March 2004</p>
+       </div>
+       <div >
+        <p class="item-title dark-3">From:</p>
+        <p class="item-description dark-2">Los Angeles,USA</p>
+       </div>         
+</div>
+</section>
+<section class="skills text-center">
+  <h3 class="section-title text-center">What I Do</h3>
+  <p class="text-center section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+  <div class="skill-container">
+  <div class="skill">
+    <img src="images/icons/js.png" alt="">
+    <h4 class="skill-title">Vanilla Javascript</h4>
+    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+  </div>
+  <div class="skill">
+    <img src="images/icons/react.png" alt="">
+    <h4 class="skill-title">React</h4>
+    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+  </div>
+  <div class="skill">
+    <img src="images/icons/nodejs.png" alt="">
+    <h4 class="skill-title">Node js</h4>
+    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+  </div>
+  <div class="skill">
+    <img src="images/icons/mongo.png" alt="">
+    <h4 class="skill-title">MongoDB</h4>
+    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+  </div>
+  </div>
+</section>
+<section>
+  <section class="resume">
+    <h3>A Summary of My Resume</h3>
+    <div class="resume-container">
+        <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+            
+                <h4 class="experience-title">Master in Computer Engineering</h4>
+                <h5 class="experience-subtitle"></h5>
+                <div class="experience-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr class="resume-hr">
+            <div class="experience">
+                <h4 class="experience-title">Master in Computer Engineering</h4>
+                <h5 class="experience-subtitle"></h5>
+                <div class="experience-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr class="resume-hr">
+            <div class="experience">
+                <h4 class="experience-title">Master in Computer Engineering</h4>
+                <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                <div class="experience-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+        </div>
+        <div class="resume-column">
+            <h3 class="resume-column-title">My Exprience</h3>
+            <div class="experience">
+                <h4 class="experience-title">Master in Computer Engineering</h4>
+                <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                <div class="experience-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr class="resume-hr">
+            <div class="experience">
+                <h4 class="experience-title">Master in Computer Engineering</h4>
+                <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                <div class="experience-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr class="resume-hr">
+            <div class="experience">
+                <h4 class="experience-title">Master in Computer Engineering</h4>
+                <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                <div class="experience-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            </div>
+            <div class="resume-download-container">
+                <button class="btn-primary">Download</button>
+            </div>
+            
 
+
+    </div>
+  </section>
+
+
+
+
+</section>
     </main>
     <footer>
 
